# JAGS

./: .gitignore  README.md
src/: CMakeLists.txt  Console.cc  Console.h  config.h  main.cpp
src/compiler/: CMakeLists.txt  parser.cc  parser.hh  scanner.cc
src/distribution/: CMakeLists.txt  DCat.cc  DMNorm.cc  DMT.cc  DSample.cc  DSum.cc  DWish.cc  SumDist.cc
src/extension/dic/: PDMonitor.cc  PDTrace.cc  dic.cc
src/extension/msm/matrix/: CMakeLists.txt
src/function/: CMakeLists.txt
src/graph/: CMakeLists.txt
src/model/: CMakeLists.txt
src/monitor/: CMakeLists.txt
src/sampler/: CMakeLists.txt  Censored.cc  ConjugateBeta.cc  ConjugateDirichlet.cc  ConjugateFactory.cc  ConjugateGamma.cc  ConjugateMNormal.cc  ConjugateMethod.cc  ConjugateNormal.cc  DiscreteSlicer.cc  FiniteMethod.cc  RWDSum.cc  RealSlicer.cc  ShiftedCount.cc  TruncatedGamma.cc
src/sarray/: CMakeLists.txt
src/terminal/: parser.cc  parser.hh  scanner.cc
src/util/: CMakeLists.txt  error.cc  error.h  logger.cpp  logger.hpp  option.cpp  option.hpp
src/version/: CMakeLists.txt  version.cc
